# Copyright 2018 The gRPC Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = [
    "//visibility:private",
])

proto_library(
    name = "stats_proto",
    srcs = ["grpc/core/stats.proto"],
)

proto_library(
    name = "messages_proto",
    srcs = ["grpc/testing/messages.proto"],
)

proto_library(
    name = "benchmark_service_proto",
    srcs = ["grpc/testing/benchmark_service.proto"],
    deps = [":messages_proto"],
)

proto_library(
    name = "control_proto",
    srcs = [
        "grpc/testing/control.proto",
        "grpc/testing/payloads.proto",
        "grpc/testing/stats.proto",
    ],
    deps = [":stats_proto"],
)

proto_library(
    name = "report_qps_scenario_service_proto",
    srcs = ["grpc/testing/report_qps_scenario_service.proto"],
    deps = [":control_proto"],
)

proto_library(
    name = "worker_service_proto",
    srcs = [
        "grpc/testing/worker_service.proto",
    ],
    deps = [
        ":control_proto",
    ],
)

proto_library(
    name = "channelz_proto",
    srcs = ["grpc/channelz/v1/channelz.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

java_proto_library(
    name = "channelz_java_proto",
    visibility = ["//visibility:public"],
    deps = [":channelz_proto"],
)

proto_library(
    name = "health_proto",
    srcs = ["grpc/health/v1/health.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "health_java_proto",
    visibility = ["//visibility:public"],
    deps = [":health_proto"],
)

proto_library(
    name = "alts_handshaker_proto",
    srcs = [
        "grpc/gcp/altscontext.proto",
        "grpc/gcp/handshaker.proto",
        "grpc/gcp/transport_security_common.proto",
    ],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "alts_handshaker_java_proto",
    visibility = ["//visibility:public"],
    deps = [":alts_handshaker_proto"],
)

proto_library(
    name = "binarylog_proto",
    srcs = ["grpc/binlog/v1/binarylog.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

java_proto_library(
    name = "binarylog_java_proto",
    visibility = ["//visibility:public"],
    deps = [":binarylog_proto"],
)

proto_library(
    name = "grpclb_load_balancer_proto",
    srcs = ["grpc/lb/v1/load_balancer.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

java_proto_library(
    name = "grpclb_load_balancer_java_proto",
    visibility = ["//visibility:public"],
    deps = [":grpclb_load_balancer_proto"],
)

proto_library(
    name = "reflection_proto",
    srcs = ["grpc/reflection/v1/reflection.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "reflection_java_proto",
    visibility = ["//visibility:public"],
    deps = [":reflection_proto"],
)

# Deprecated: do not use
proto_library(
    name = "reflection_proto_deprecated",
    srcs = ["grpc/reflection/v1alpha/reflection.proto"],
    deprecation = "Use :reflection_proto instead",
    visibility = ["//visibility:public"],
)

# Deprecated: do not use
java_proto_library(
    name = "reflection_java_proto_deprecated",
    deprecation = "Use :reflection_java_proto instead",
    visibility = ["//visibility:public"],
    deps = [":reflection_proto_deprecated"],
)

