module(
    name = "grpc-proto",
    version = "0.0.0",
    bazel_compatibility = [">=7.0.0"],
    repo_name = "io_grpc_grpc_proto",
)

bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5", repo_name = "com_google_googleapis")
bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")
