module(
    name = "grpc-proto",
    version = "0.0.0",
    repo_name = "io_grpc_grpc_proto",
)

# Security: All dependencies are cryptographically verified through Bazel Central Registry
# This eliminates supply chain attack vectors from unpinned git commits

bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "protobuf", version = "27.3", repo_name = "com_google_protobuf")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a", repo_name = "com_google_googleapis")

# Compatibility shim for legacy WORKSPACE users
bazel_dep(name = "bazel_skylib", version = "1.7.1")
